Adjusted CSS for mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav>
             <div class="logo-container">
                 <div class="logo-wrapper">
-                    <img src="logo.png" alt="Seto Culinary Academy Logo" class="header-logo">
+                    <img src="images/logo.png" alt="Seto Culinary Academy Logo" class="header-logo">
                     <div class="logo-text">
                         <div class="logo">
                             <span class="logo-seto">SETO</span>
@@ -43,7 +43,7 @@
 
     <section id="home" class="hero">
         <div class="hero-image">
-            <img src="img 1.jpg">
+            <img src="images/hero-image.jpg" alt="Culinary Academy Kitchen">
         </div>
         <div class="hero-content">
             <h1>Welcome to Seto Culinary Academy</h1>
@@ -86,7 +86,7 @@
         <div class="course-grid">
             <div class="course-card">
                 <div class="course-image">
-                    <img src="Japanese Cuisine.jpg" alt="Japanese Cuisine">
+                    <img src="images/Japanese Cuisine.jpg" alt="Japanese Cuisine">
                 </div>
                 <div class="course-content">
                     <h3>Japanese Cuisine</h3>
@@ -96,7 +96,7 @@
             </div>
             <div class="course-card">
                 <div class="course-image">
-                    <img src="Nepali and Indian Cuisine.jpg" alt="Nepali & Indian Cuisine">
+                    <img src="images/Nepali and Indian Cuisine.jpg" alt="Nepali & Indian Cuisine">
                 </div>
                 <div class="course-content">
                     <h3>Nepali & Indian Cuisine</h3>
@@ -106,7 +106,7 @@
             </div>
             <div class="course-card">
                 <div class="course-image">
-                    <img src="Chinese Cuisine.webp" alt="Chinese Cuisine">
+                    <img src="images/Chinese Cuisine.webp" alt="Chinese Cuisine">
                 </div>
                 <div class="course-content">
                     <h3>Chinese Cuisine</h3>
@@ -116,7 +116,7 @@
             </div>
             <div class="course-card">
                 <div class="course-image">
-                    <img src="Continental.jpg" alt="Continental & Italian Cuisine">
+                    <img src="images/Continental.jpg" alt="Continental & Italian Cuisine">
                 </div>
                 <div class="course-content">
                     <h3>Continental & Italian Cuisine</h3>
@@ -130,7 +130,7 @@
         <div class="course-grid">
             <div class="course-card">
                 <div class="course-image">
-                    <img src="Sushi Making.webp" alt="Sushi Making">
+                    <img src="images/Sushi Making.webp" alt="Sushi Making">
                 </div>
                 <div class="course-content">
                     <h3>Sushi Making</h3>
@@ -140,7 +140,7 @@
             </div>
             <div class="course-card">
                 <div class="course-image">
-                    <img src="Ramen Making.webp" alt="Ramen">
+                    <img src="images/Ramen Making.webp" alt="Ramen">
                 </div>
                 <div class="course-content">
                     <h3>Ramen</h3>
@@ -150,7 +150,7 @@
             </div>
             <div class="course-card">
                 <div class="course-image">
-                    <img src="Naan and Tandoor.jpeg" alt="Naan and Tandoor">
+                    <img src="images/Naan and Tandoor.jpeg" alt="Naan and Tandoor">
                 </div>
                 <div class="course-content">
                     <h3>Naan and Tandoor</h3>
@@ -160,7 +160,7 @@
             </div>
             <div class="course-card">
                 <div class="course-image">
-                    <img src="cake making.jpg" alt="Bakery and Patisserie">
+                    <img src="images/cake making.jpg" alt="Bakery and Patisserie">
                 </div>
                 <div class="course-content">
                     <h3>Bakery and Patisserie</h3>
