--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
                     </div>
                 </div>
             </div>
+            <button class="mobile-menu-btn">
+                <i class="fas fa-bars"></i>
+            </button>
             <div class="nav-right">
                 <div class="contact-info">
                     <i class="fas fa-phone"></i>
