--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Alex+Brush&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <header>
         <nav>
@@ -23,9 +25,6 @@
                     </div>
                 </div>
             </div>
-            <button class="mobile-menu-btn">
-                <i class="fas fa-bars"></i>
-            </button>
             <div class="nav-right">
                 <div class="contact-info">
                     <i class="fas fa-phone"></i>
@@ -34,6 +33,9 @@
                     <i class="fas fa-envelope"></i>
                     <a href="mailto:setoculinaryacademy@gmail.com">setoculinaryacademy@gmail.com</a>
                 </div>
+                <button class="mobile-menu-btn">
+                    <i class="fas fa-bars"></i>
+                </button>
                 <ul class="nav-links">
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about">About</a></li>
@@ -60,8 +62,10 @@
         <h2>About Us</h2>
         <div class="about-content">
             <div class="about-text">
-                <p>Seto Culinary Academy is a premier cooking school located in Damak-05, Jhapa. We are dedicated to nurturing culinary talent and providing world-class culinary education.</p>
-                <p>Our state-of-the-art facilities and experienced instructors ensure that students receive the best possible training in both traditional and modern cooking techniques.</p>
+                <p>Seto Culinary Academy is a premier cooking school located in Damak-05, Jhapa. We are dedicated to
+                    nurturing culinary talent and providing world-class culinary education.</p>
+                <p>Our state-of-the-art facilities and experienced instructors ensure that students receive the best
+                    possible training in both traditional and modern cooking techniques.</p>
             </div>
             <div class="features">
                 <div class="feature">
@@ -218,7 +222,8 @@
                                         <i class="fas fa-map-marker-alt"></i>
                                         <div class="text">
                                             <span class="label">Visit Now</span>
-                                            <span class="value">Damak-05, Beldangi Road, Opposite to Sewaro Complex, Jhapa, Nepal</span>
+                                            <span class="value">Damak-05, Beldangi Road, Opposite to Sewaro Complex,
+                                                Jhapa, Nepal</span>
                                         </div>
                                     </div>
                                 </li>
@@ -230,17 +235,20 @@
                             <div class="input-grid">
                                 <div class="form-group">
                                     <div class="input-group">
-                                        <input type="text" class="form-control" name="name" placeholder="Your Name" required> <i class="fas fa-user"></i>
+                                        <input type="text" class="form-control" name="name" placeholder="Your Name"
+                                            required> <i class="fas fa-user"></i>
                                     </div>
                                 </div>
                                 <div class="form-group">
                                     <div class="input-group">
-                                        <input type="email" class="form-control" name="email" placeholder="Your Email" required> <i class="fas fa-envelope"></i>
+                                        <input type="email" class="form-control" name="email" placeholder="Your Email"
+                                            required> <i class="fas fa-envelope"></i>
                                     </div>
                                 </div>
                                 <div class="form-group">
                                     <div class="input-group">
-                                        <input type="tel" class="form-control" name="phone" placeholder="Your Phone" required> <i class="fas fa-phone"></i>
+                                        <input type="tel" class="form-control" name="phone" placeholder="Your Phone"
+                                            required> <i class="fas fa-phone"></i>
                                     </div>
                                 </div>
                                 <div class="form-group">
@@ -249,25 +257,28 @@
                                             <option value="">Select Course</option>
                                             <option value="japanese">Japanese Cuisine</option>
                                             <option value="nepali">Nepali & Indian Cuisine</option>
-                                            </select> <i class="fas fa-graduation-cap"></i>
+                                        </select> <i class="fas fa-graduation-cap"></i>
                                     </div>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <div class="input-group">
-                                    <textarea class="form-control" name="message" placeholder="Your Message" rows="4" required></textarea> <i class="fas fa-comment"></i>
+                                    <textarea class="form-control" name="message" placeholder="Your Message" rows="4"
+                                        required></textarea> <i class="fas fa-comment"></i>
                                 </div>
                             </div>
                             <div class="form-group text-right">
-                                <button type="submit" class="submit-button">Book Now <i class="fas fa-arrow-right"></i></button>
+                                <button type="submit" class="submit-button">Book Now <i
+                                        class="fas fa-arrow-right"></i></button>
                             </div>
                         </form>
                     </div>
                 </div>
             </div>
             <div class="map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d500!2d87.69798754417921!3d26.661929360881043!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39e5ba6b2956c9b7%3A0x8e3c5e624f1d1a08!2sSeto%20Culinary%20Academy!5e0!3m2!1sen!2snp!4v1708182071619!5m2!1sen!2snp" 
-                    width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" 
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d500!2d87.69798754417921!3d26.661929360881043!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39e5ba6b2956c9b7%3A0x8e3c5e624f1d1a08!2sSeto%20Culinary%20Academy!5e0!3m2!1sen!2snp!4v1708182071619!5m2!1sen!2snp"
+                    width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
@@ -281,7 +292,9 @@
             </div>
             <div class="social-links">
                 <a href="https://www.facebook.com/profile.php?id=61558845643112"><i class="fab fa-facebook"></i></a>
-                <a href="https://www.instagram.com/seto_culinary_academy?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><i class="fab fa-instagram"></i></a>
+                <a
+                    href="https://www.instagram.com/seto_culinary_academy?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><i
+                        class="fab fa-instagram"></i></a>
                 <a href="#"><i class="fab fa-youtube"></i></a>
             </div>
         </div>
@@ -292,4 +305,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
